--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 <body>
   <h1>My Tuesday Schedule</h1>
   <ol>
-    <li>Period 1 is AAAA </li>
-    <li>Period 2 is BBBB </li>
-    <li>Period 3 is CCCC </li>
-    <li>Period 4 is DDDD </li>  
-    <li>Period 5 is EEEE </li>  
-    <li>Period 6 is FFFF </li>  
-    <li>Period 7 is GGGG </li>  
-    <li>Period 8 is HHHH </li>  
-    <li>Period 9 is JJJJ </li>  
-    <li>Period 10 is KKKK </li>  
+    <li>Period 1 is AP Lit </li>
+    <li>Period 2 is Web Dev </li>
+    <li>Period 3 is Health </li>
+    <li>Period 4 is AP Psych </li>  
+    <li>Period 5 is Senior Chorus </li>  
+    <li>Period 6 is AP Comp Gov </li>  
+    <li>Period 7 is Lunch </li>  
+    <li>Period 8 is Music History </li>  
+    <li>Period 9 is Gym </li>  
+    <li>Period 10 is Operetta </li>  
   </ol>
 
   
